Fix Mobile Responsive on iPhone 5
Reason for Change
=================
* Mobile responsive styles were overlapping on iPhone 5.

Changes
=======

Global
------
* Set the basic typography for large screens as 20% bigger than base (i.e. mobile).

Nav
---
* Add a 1-column margin when on large screens.
* Fix the font sizes.
* Remove the `max-width` directive from the `wrap-container` class.

Hero
----
* Fix font sizes.
* Add a 1-column margin when on large screens.

Minor
=====
* Loading `base/base` preset styles should happen after `neat` is loaded.

--- a/source/assets/stylesheets/base/_typography.scss
+++ b/source/assets/stylesheets/base/_typography.scss
@@ -6,6 +6,10 @@ body {
   font-size: $base-font-size;
   -webkit-font-smoothing: antialiased;
   line-height: $base-line-height;
+
+  @include media($medium-screen-up) {
+    font-size: $base-font-size * 1.2;
+  }
 }
 
 h1,
